--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build output
+# Build output (ignore backend dist, but keep client/dist)
 dist/
 build/
+!client/dist/
 
 # OS files
 .DS_Store
